weblate/redis/headless-svc.yaml
---
# Source: weblate/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: weblate-redis-headless
  namespace: "weblate"
  labels:
    app.kubernetes.io/instance: weblate
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 8.0.2
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: weblate
    app.kubernetes.io/name: redis
